# aitrios-sdk-edge-app

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml
include/: log.h  (+11 more)
libs/: CMakeLists.txt
libs/common/include/: context.hpp  macros.h  map.hpp  memory_manager.hpp  memory_usage.h
libs/common/src/: CMakeLists.txt  context.cpp  map.cpp  memory_manager.cpp  memory_usage.cpp
libs/compat_headers/: CMakeLists.txt
libs/depend/edge_app/: device.h  senscord.h  user_bridge_c.h  wasi_nn.h
libs/depend/edge_app/evp_c_sdk/: agent.h  sdk.h  sdk_base.h  sdk_blob.h  sdk_blob_azure.h  sdk_blob_evp.h  sdk_blob_http.h  sdk_blob_http_ext.h  sdk_types.h
libs/draw/src/: CMakeLists.txt  draw.cpp
libs/log/include/: log_internal.h
libs/log/src/: CMakeLists.txt  log.cpp  log_common.cpp  log_internal.cpp  log_private.cpp  log_private.h
libs/mock/: CMakeLists.txt
libs/nn/src/: CMakeLists.txt  edgeapp_core.cpp  nn.cpp
libs/py/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
libs/py/debian/: changelog  control  rules
libs/py/example/: object_detection_edge_app.py  object_detection_edge_app_opencv.py  object_detection_edge_app_yolov8.py  privacy_mask_edge_app.py  simple_edge_app.py  utils.py
libs/py/example/configs/: configuration.json  run_5_iterations.json
libs/py/scripts/: install-edge_app_sdk.sh  kill-processes.sh  run-edge_app.sh  run-object-detection.sh  run-privacy-mask.sh  send-configuration.sh
libs/py/src/: py_data_export.cpp  py_data_export.hpp  py_edge_app.cpp  py_edge_app.hpp  py_mocks.cpp  py_module.cpp  py_shared_state.cpp  py_shared_state.hpp  py_sm.cpp
libs/py/src/bindings/: bind_data_export.cpp  bind_enums.cpp  bind_sensor_channel.cpp  bind_sensor_error.cpp  bind_sensor_frame.cpp  bind_sensor_stream.cpp  bind_stream_property.cpp  bindings.hpp  exceptions.hpp
libs/py/src/edge_app_sdk/: __init__.py  data_export.py  enums.py  utils.py
libs/py/src/includes/: py_sensor_types.hpp
libs/py/tests/: test_property_types.py
libs/python/: LICENSE  README.md  pyproject.toml
libs/python/scripts/: run_clsassification.sh  run_objectdetection.sh
libs/python/src/edgeapplib/: app.py  data_export.py  models.py  utils.py
libs/python/tests/: requirements.txt
libs/python/tests/unit/: test_aitrios_data_export.py  test_device_message.py  test_fbs_encoder.py
libs/receive_data/include/: receive_data_private.h
libs/receive_data/src/: CMakeLists.txt  receive_data.cpp  receive_data_utils.cpp  receive_data_utils.h
libs/send_data/include/: send_data_private.h
libs/send_data/src/: CMakeLists.txt  send_data.cpp
libs/send_data/src/process_format/: CMakeLists.txt  process_format.cpp  process_format.hpp
libs/sensor/src/: CMakeLists.txt  sensor.cpp  sensor_def.h  sensor_unsupported.h  sensor_utils.cpp  sensor_wrapper.cpp  sensor_wrapper_error.cpp
libs/sm/include/: sm_api.hpp
libs/sm/src/: CMakeLists.txt  main.cpp  sm_api.cpp  sm_configurator.cpp  sm_configurator.hpp  sm_context.cpp  sm_context.hpp  sm_core.cpp  sm_core.hpp
libs/sm/src/callbacks/: configuration.cpp  configuration.hpp
libs/sm/src/dtdl_model/: CMakeLists.txt  dtdl_model.cpp  dtdl_model.hpp  properties.h  utils.cpp  utils.hpp
libs/sm/src/states/: applying.cpp  applying.hpp  coolingdown.cpp  coolingdown.hpp  creating.cpp  creating.hpp  destroying.cpp  destroying.hpp  idle.cpp  idle.hpp  running.cpp  running.hpp  running_thread.cpp  running_thread.hpp  state.cpp  state.hpp  state_defs.h  state_factory.cpp  state_factory.hpp  state_utils.cpp  state_utils.hpp
libs/tests/mocks/data_export/: mock_data_export.cpp  mock_data_export.hpp
libs/tests/mocks/data_processor_api/: mock_data_processor_api.cpp  mock_data_processor_api.hpp  mock_utils.hpp
libs/tests/mocks/device/: mock_device.cpp  mock_device.hpp
libs/tests/mocks/draw/: mock_draw.cpp  mock_draw.hpp
libs/tests/mocks/event_functions/: mock_sm.cpp  mock_sm.hpp
libs/tests/mocks/evp/: CMakeLists.txt  mock_evp.cpp  mock_evp.hpp  mock_evp_wrapper.cpp  pytest_support.c  simple_evp.c
libs/tests/mocks/log/: mock_log.cpp  mock_log.hpp
libs/tests/mocks/lp_recog_data_processor/: mock_lp_recog_data_processor.cpp  mock_lp_recog_data_processor.hpp
libs/tests/mocks/nn/: mock_edgecore.cpp  mock_edgecore.hpp  mock_nn.cpp  mock_nn.hpp  mock_wasi_nn.c
libs/tests/mocks/preprocess_lib/: mock_preprocess_lib.cpp  mock_preprocess_lib.hpp
libs/tests/mocks/receive_data/: mock_receive_data.cpp  mock_receive_data.hpp
libs/tests/mocks/send_data/: mock_send_data.cpp  mock_send_data.hpp
libs/tests/mocks/sensor/: mock_sensor.cpp  mock_sensor.hpp  testing_utils.cpp  testing_utils.hpp
sample_apps/classification/tests/: CMakeLists.txt  test_sm.cpp
sample_apps/lp_recog_y/: CMakeLists.txt  README.md
sample_apps/lp_recog_y/configuration/: configuration.json
sample_apps/lp_recog_y/package/: edge_app_lp_recog_y_interface.json  manifest.json
sample_apps/lp_recog_y/src/: preprocess_lib.cpp  preprocess_lib.h  sm.cpp
sample_apps/lp_recog_y/test_data/: custom_parameter.json  output_tensor_lpr.jsonc
sample_apps/lp_recog_y/tests/: CMakeLists.txt  test_sm.cpp
sample_apps/ssl/: CMakeLists.txt  README.md
sample_apps/ssl/configuration/: configuration.json
sample_apps/ssl/package/: edge_app_ssl_interface.json  manifest.json
sample_apps/ssl/src/: sm.cpp
sample_apps/ssl/ssl/: CMakeLists.txt
sample_apps/ssl/test_data/: custom_parameter.json
sample_apps/ssl/tests/: CMakeLists.txt  test_sm.cpp
sample_apps/switch_dnn/tests/: CMakeLists.txt  test_analyzer.cpp  test_switch_dnn.cpp
sample_apps/tests/edge_app/: CMakeLists.txt  README.md  check_auto_exposure_metering.py  check_pq_settings.py  conftest.py  constants.py  requirements.txt  state_checker.py  test_integration.py  utils.py
sample_apps/utils/tests/: CMakeLists.txt  test_utils.cpp
tests/edge_app/: CMakeLists.txt  README.md  check_auto_exposure_metering.py  check_pq_settings.py  conftest.py  constants.py  opencv.supp  state_checker.py  test_integration.py  test_opencv_resize.py  utils.py
(+435 files in other folders)
