[build-system]
requires = ["scikit-build-core", "pybind11", "pybind11-stubgen", "numpy", "opencv-python", "requests"]
build-backend = "scikit_build_core.build"

[project]
name = "edge_app_sdk"
version = "0.2.0"

[tool.scikit-build.cmake.define]
SENSCORD_INSTALL_PATH = {env="SENSCORD_INSTALL_PATH"}
EVP_MOCK_TEST = {env="EVP_MOCK_TEST"}
